Add Main Menu button to header

--- a/index.html
+++ b/index.html
@@ -790,6 +790,7 @@
             <h1>🎓 NC Insurance Licensing Quiz</h1>
             <p>Property & Casualty Study Guide - Enhanced Edition</p>
             <div class="header-buttons">
+                <button class="header-btn" onclick="showStartScreen()" style="background: #28a745; color: white;">🏠 Main Menu</button>
                 <button class="header-btn" onclick="showCoinsuranceCalculator()">🧮 Coinsurance Calculator</button>
                 <button class="header-btn" onclick="showACVCalculator()">💰 ACV Calculator</button>
                 <button class="header-btn" onclick="showQuickReference()">⚡ Quick Reference</button>
